[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/PlaySpace.gd" type="Script" id=1]
[ext_resource path="res://assets/Background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Reverse.png" type="Texture" id=3]
[ext_resource path="res://scripts/DeckPlacement.gd" type="Script" id=4]
[ext_resource path="res://assets/Reverse_black.png" type="Texture" id=5]
[ext_resource path="res://scripts/CardPlacement.gd" type="Script" id=6]

[node name="PlaySpace" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="PlayerHandPosition" type="Node2D" parent="Background"]
position = Vector2( 0, 1400 )

[node name="PlayedCards" type="Node2D" parent="."]

[node name="PlayerCards" type="Node2D" parent="."]

[node name="CardPlacement" type="Node" parent="."]

[node name="CardPlacementButton" type="Button" parent="CardPlacement"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 590.0
margin_top = -75.0
margin_right = 690.0
margin_bottom = 75.0
button_mask = 0
script = ExtResource( 6 )

[node name="DeckPlacement" type="Node" parent="."]

[node name="DeckPlacementButton" type="TextureButton" parent="DeckPlacement"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 43.0
margin_top = -56.0
margin_right = 529.0
margin_bottom = 703.0
rect_scale = Vector2( 0.16, 0.16 )
action_mode = 0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 4 )

[connection signal="mouse_entered" from="CardPlacement/CardPlacementButton" to="." method="_on_CardPlacementButton_mouse_entered"]
[connection signal="mouse_exited" from="CardPlacement/CardPlacementButton" to="." method="_on_CardPlacementButton_mouse_exited"]
[connection signal="pressed" from="DeckPlacement/DeckPlacementButton" to="." method="_on_DeckPlacementButton_pressed"]
